k8s/overlays/staging/ingress/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-app-ingress
spec:
  tls:
  - hosts:
    - "api.staging.gong.ng"
    - "app.staging.gong.ng"
    secretName: gong-ng-staging-tls-secret
  rules:
  - host: "api.staging.gong.ng"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 8000
  - host: "app.staging.gong.ng"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app-service
            port:
              number: 3000


# k8s/overlays/staging/ingress/ingress-patch.yaml
